@@ -13,15 +13,8 @@ DIST xf86-video-intel-2.16.0.tar.bz2 1249069 SHA256 77482bcd1e30a57b68ba0d6a1862
 DIST xf86-video-intel-2.17.0.tar.bz2 1339717 SHA256 8b8450f2a2cc52ef31a83414e2f290e748a956690e11b41759d5650aaedc4387
 DIST xf86-video-intel-2.18.0.tar.bz2 1424467 SHA256 dce63e33ccfada39ef1e1e6768dfd8edd4c525670dfe56d1c42b2f9570039ffc
 DIST xf86-video-intel-2.19.0.tar.bz2 1463260 SHA256 32133d61b14ce3b45b83a60e4ed8eb75159259d708f056144250aaeabf16e4bc SHA512 988f231570cdd7e5c60880472c8bee765def040addf1fa6e5bc9e8a8722b5500d4ae2b798383dc90f2ca3df439e230c4df2d7e3f7cb50341d2d3d38486520292 WHIRLPOOL a19605d2473e72fc4e81a7a327a9b8e9534bdfceca64b44a3d0fd62bf031c9ec10c7d12379b9ca327bde8bc90e15c73cee7ef2de71de00c92bc70969f2a91d37
-DIST xf86-video-intel-2.20.0.tar.bz2 1552275 SHA256 21949297220ceda32bba430f778c6409002079dc717c7190dbd1062ab4a56783 SHA512 ebd51c6031c62d5ac93b03dde712b9918778e8a58891db0747747124c4956dde19d3bf3659979d7fcc1ff08268f347a162e1ee645151ba8d0b39b5f2f4256feb WHIRLPOOL f76d89456ba833c7e3a0d136fb81af58502368803b554ba413a5029581d074cbf5a3f97c28e77dd3dbe18de0fcd2d47c4f3e01c50b51cd7de050544ae248a590
-DIST xf86-video-intel-2.20.1.tar.bz2 1555032 SHA256 de340a527dfa26bba6f79b423c2fe2b1d70657e46fa3fb468613c047443ff424 SHA512 cd0b39bcc5adeb44d6768c9482a7c779c3553c6b9f966b402b1ec29e72298566078cfabfa055f6d5e3f9ef43109ae1a2567519e8151341634023e8e14b04e7a4 WHIRLPOOL 8e0695f05abd9e314eb51fe1e1fa8427977779da6c7baa8f346732b89d5ada04ad012e4818843733c360d3640fabb337899800f1cc48a43b2b1976d81fab952d
 DIST xf86-video-intel-2.20.10.tar.bz2 1643190 SHA256 df41a28c3d877f3c5e87cd7d840f51fd38dde8bc91f5f0d09510fb8e2336cdcd SHA512 2ddb0ceb8540640cbdf0817f84dcc62d86b3a335377c905993084d54563769aa6c572a97c22db3e184d45e885bfb6b7f0a388632dd2d1fcc5f41ae82c1137c6d WHIRLPOOL 40083853926a9cbb802b811746b3c1fcdaa9f6e0d50a4efd0389eab75ec44de17cf6240c992cc3ad318a4a105e8e3b2d6d0cea4d4614e05b5f0475498f6f7163
 DIST xf86-video-intel-2.20.12.tar.bz2 1645262 SHA256 39e02b7f90a2665efe5483075f93b1c87d24f48070d5de783dd41e20d9eb0c7c SHA512 00d83c517cde1ca02088e8e5faccf924ec6aa3dd17a2850288bba0a2cb6e58f09829cc530b4ed586ef796149dce4ad204581ef6327c1d4cc15538326f9e51d21 WHIRLPOOL c4156610d6144e7d60e55ab28d295191e4406a97e9faf3f51816781790300891363658433910879ae22698a65706283ecb244d59edc3fb3ae3330a12aadfbd3e
-DIST xf86-video-intel-2.20.2.tar.bz2 1559622 SHA256 4c30cce0b5f7b427d76898c439f2c9fd31a8b45babd8ef82ec4c0004ae0a26a9 SHA512 bbb5bd42a31b67003ef440ce55593bc78feaf20a31bbf68b1152ad4dffbbb7f9a3581e63775024829d21260fc2d4e363fa47d9dba404e7a44bfced418eb6a940 WHIRLPOOL 40bd264ed3636be8117d7e2036bc044a4bdc074997765c851ce2097685e11cd241ff34cbf6611710e20f45210d0a5a81d61c96eaf6d33af48e44ed8104b63247
-DIST xf86-video-intel-2.20.3.tar.bz2 1607972 SHA256 effca1382e595cc071b109818150db229ffb54f92769e4758398abbe69acb92c SHA512 1924303f96d4f05a552d89077d09b6b363d28ad21cd6a47049758782545489f8e737f139e9f116debcd340fc8c571ecf0b85dc394fb5a348ce4a35ac8b2384d1 WHIRLPOOL e076980bae869720bb64ba842898736e7b75eb2a9ddb1e87693c2c2c8fa139cc3aed6b664eeed1a18b135518d0c04f8ff3dd6c5e05ae0b65d40e60dd2008dfcd
-DIST xf86-video-intel-2.20.5.tar.bz2 1621295 SHA256 143d1cd808694ca7202b642fbb2b03a43a7474d7b527216c517fc41319410bec SHA512 fcad519568ee10c1bd62f882593a62ad3b90a1959daeb71cab404ea8d87bb63c8b09dec7bb71d3013e39d6338b44c8dbc146698549fbd17197cb1901cf7bab1c WHIRLPOOL 1fcbc7cbb934b3f0e306e8717614a9a2eff289322b8c6ff0176206ad0047834ddbdd405cc6106c89d6ad896ec8bc353137d5963903297145beddf236c86f740f
-DIST xf86-video-intel-2.20.6.tar.bz2 1622375 SHA256 02e059bfa8e431b7503148a55b7d491816442c50ca706f3ab40052dc454cbb6d SHA512 beab9ba0368c8fa5cafe524686361cc62dabcd9176835b90b5415d9d2759d1f10f86fc558de044c5813e68a1090d06d058483982b361637a9cb6df155be10e58 WHIRLPOOL 6744ae3bb6e95d8558b405d85d47da5852265c4866043bc8fbad35993c23e2acf299c635132a7e0afad0b328428895da24e2f43722edab9f2ec7668e91707181
-DIST xf86-video-intel-2.20.7.tar.bz2 1626994 SHA256 e34503e60f3bc54a7ecbca3a4e7052a5a1015b0f1b4009bf84c101b5e08f9bac SHA512 edaa1f311984732233e6f7a45effdf8e40b73ef641ebc6d85b5d01483a2da1d312500279a199ff4875966f7c0a24b1915367e8381b823ae2b71e71211e6efdc1 WHIRLPOOL 2a7959bf45e009386f1257d0d35fa4ded0449b823c5ce4f2d23faa41ccdc37e1ee023960a2b2e93a897547d23027d5ef86a1c940234621d7824a380da2409616
 DIST xf86-video-intel-2.20.8.tar.bz2 1632882 SHA256 2a126b2bb93b8d9db5eef68f1496e83713fd51ac435a7fafc7a36ff9c7ca83e7 SHA512 3e758e5ef6a0dc715e39f2efca65affb8e7bf052742ef61067f7cdec58af74dacc74031320d22b733980a5717bbd97cb799ec38a9bb10efcfb4f9e89b2ac99aa WHIRLPOOL ee5afea9ac2218796a6c7477392b70725875fb2cbaaf776a34ddbfeffa7102c029e171685cf416b44c8745cc852bb250d6e3b8dc7ea77f702d36cc23edaeb5b5
 DIST xf86-video-intel-2.20.9.tar.bz2 1636882 SHA256 b9830c9fdaf2f64648cd45807883821f14dd91f9ff1cfa59af11035f62dc9389 SHA512 6dce784ec45f13d0d0d856ab09f958057aec12ef510e2afff876bf5f77d369ed0a2e4b0c46c2eac84a024451f5b3d5179f6495c59b3d0dfd1b681cb97f3ad8a5 WHIRLPOOL 1f4261fef68d8319234ac886d5a9576431443c0cd6f15bcf1f43546ef51ff8746c9aca957cd94e1964affb1a3191c00a730bdb73faed8ab3e7ab77bbeb422b9f
 DIST xf86-video-intel-2.8.1.tar.bz2 748928 SHA256 c6778fc7e43c701d5829514329ee70f5dc539ff8f5b3c79587577b617a535c81 SHA512 9d1f7e00017d812efef66e06a8be46577ca6c96bef5515981dbcd568e13c643a9018c5e3f425b1ec195571772316bbb59c3e7782528620c6ac7a7f3684116246 WHIRLPOOL 36b189f4fb7637043666d535c50c82168c6aebe577bfedafe8c1d53116645969e656a7e5c0fb39bb4f92c9b2f1a2ae1ef66a09bf8ebda457cedda84ce379ce30
@@ -35,18 +28,11 @@ EBUILD xf86-video-intel-2.16.0.ebuild 1271 SHA256 11cc712c4aa163b13060f796e59973
 EBUILD xf86-video-intel-2.17.0-r3.ebuild 1442 SHA256 9d2b64140a5522fcf18e2c0d8779f989f73eb33ac51abd03d3cbd6e393eade45 SHA512 77dc34a10969117419d43a556c9f82f8ff781029fdc2e6277e461279e72b5a2c2ab5cbb4221736ac30870c08d980fba6f275181d629f671f581f901443c7b06b WHIRLPOOL b91dbd16565f62c48dc2ebdfd629d1143e33fba1a7fbaec6b663695eb18ac31b4e20140315460e3c099508d3ad0fa31fc3ba7c7b374d54e4f1f20258322be46f
 EBUILD xf86-video-intel-2.18.0.ebuild 1299 SHA256 e7ac5cebb467afa74615baea43d0696ce34590531a2b51c55486046605db6790 SHA512 e35871d6044c888b00ab170df6ff6ebebdbac405d79cd279dd57764d411ae5464518359290c1d7659dee288b7f29b8591bf79ed2f3be47dde94363d966503380 WHIRLPOOL 4f02dbcc1c1d65de195f895f4a1099e7c4a39f0b902606d4b9a6b276551274541e7652d35ac85e59c0711aa28c7713cb4c6a2a8a05d36414aec7c7ebd1df7825
 EBUILD xf86-video-intel-2.19.0.ebuild 1370 SHA256 54857f8823ee2d4a3d943e51dd0913714607b93480213d14ddd02b0bc47ca23c SHA512 3158705db8a31d7d62621bbff736134db78d5b7a534aa7e0819c8137eaa89ebb12a161098f7c13b61377861bc74cdce40990eb9a729e3e00d43f7683927599ca WHIRLPOOL 4cf754091d5e22304b52bbd323144290ca022fbe33a7ec7ae2502b591e4bae206a93dcb02a511434f0fc1f9df6d1ce287d9844cf521aedb505dfc375371f9887
-EBUILD xf86-video-intel-2.20.0.ebuild 1355 SHA256 86de75abcee78e65d7b23b0f488bfc1b54189dde2f119b02384f267230bba4b8 SHA512 df34ba12f5b258bfb388497c9b00d2ce19fa1c3692d0454f8a011b6aa578497c02abc9cd14c8748adfecafcf54e6aac2984be70242289643d0699ce39e4adfc5 WHIRLPOOL 4424ed586149621ac3e7c732f0e0df968ccef6ee71a4f01ffba51b0859fcdbd6ea200ce33b872fcd9423871f1a72f0094cb26b80b21e29b4af347dfdf172c8d8
-EBUILD xf86-video-intel-2.20.1.ebuild 1355 SHA256 59cbc2b2d146b78624ce631f79e59297b7df3ed29317d513b678538dc44fe8fb SHA512 440a90ff4cd7e90ffda0c880036b4afc36a70b13d1b2cbe65be21b7908ef7776d0ca8cef5b4f27c6d5dc92dbd340891354f981204cca257b118992cbf83107a5 WHIRLPOOL ec4c73715469a42a25a02d628b98f528929b86bbe8cda48fb58d65675ed53e564be8f26db1049a6376dcb8117c6653235ff6c794074fdf258cc4b13d208f5dfe
 EBUILD xf86-video-intel-2.20.10.ebuild 1580 SHA256 a1afa131583636b5c89ed8957c2ff0f15e8a46dc10a4c189e31d0d28e2ab7f62 SHA512 ab9916a7f87c7d7c8749b7ca4a6eb360d4def6025cdaaf4623a37e4146e01d9d99463877f7531337e8102e5324fe7716ec030eaeec4acc9dd4f420846f4ec8e5 WHIRLPOOL b4c2016e5e26a2080230f90f2300fde1b021945bdb712454bd336b3114fb53507f1af69052bf205396e682b8bc5ba62449387b4decb4b1c2a8bbb7fa355ba0c9
 EBUILD xf86-video-intel-2.20.12.ebuild 1518 SHA256 8d5553b064ae4e7a08d68bef1861a6e430ad14c64a8911d950597e3ca0c5e442 SHA512 beacc07c22e70229c232cc7f563c496b0e4902ab7e764442f75fc4f10b4cc1906e16e3276f15a1b61de524405e77e8e5ba6427ce659c865349609b870f454b2b WHIRLPOOL 75c323696e46857fabc09b42a06f1a9dad9fa891bf6bfc9d49c865a8bd566ff5693e1f57b3407017c9e0f993154a5a0d2c582650b0eb32f81c0d00279f2ee120
-EBUILD xf86-video-intel-2.20.2.ebuild 1355 SHA256 f7e654a851f88ce3e7d8b5a1df697dfa8199ac40a2c607491cfd1e9ed37a3715 SHA512 fdeea7caa4ade6bdd0d0972d8a34f8cdf6c983b9e8f4175b424d2fd3d445b96145bca6a947144a086aaf86badce70b3910f19393d5a501865d0e10943b2ba284 WHIRLPOOL bc17c8377a39003aca7f70a7498d8c828743a32348c2e6964b98d6b1ef70fe15044badc0ceb03cd0e4509a396a0cf424ae3ca18ce6dbfc86cef6ca568e130542
-EBUILD xf86-video-intel-2.20.3.ebuild 1355 SHA256 9a5b47dde9dc1d8d1b81c55230d1b764407f919e515aae94ad723abfeb27dd62 SHA512 b67d0c3146535d11a6c3274704eaa890c7ad22448626e41435424973db3d016b7853d264f998eac033a46bbb87ea25dae2b12821746b35180d842e0db9166db3 WHIRLPOOL fada91129f3cd2ddc87563b694a0d0adc301419d770559a7078e910fa9fbf1c8e1cdf9be544ca1495bbffb358a713dcb0f9eaf1825cd35910a2b006f0aa197e2
-EBUILD xf86-video-intel-2.20.5.ebuild 1355 SHA256 46bb876a6a94b2a49f3310a2f821ab22f177be5b4bfc8157e85ec50e717a8c41 SHA512 dfe6be20b8335ca2a4b9e6548e640070625943eb2d831dad16a087bba71f6814849c4686dada97060fded46c326f6a8d85d68a75049ee92fea1bd311c5f08878 WHIRLPOOL 40396f8213764fb73d57af3edb1ba4055337ff10e1afe0c69c9e8a014bbfeaabf2bb7d0e0cdf0e9aeadcc156a0d3a75640041d53c5c68619ea0570e9366e4144
-EBUILD xf86-video-intel-2.20.6.ebuild 1355 SHA256 74a4b84cdfb5a8fb7af605d1dce5536e03a22445e0bfa3e71f1c5b0ac1cba358 SHA512 12ea218e33dee88e9df3429c0a5e17e9758b1ca819e482cc454fa4c56e0165c6ebcd56313527736067b037e44b38a2f4284e9fc08103d877a29408668299d59c WHIRLPOOL 7f02f3cec12b40189063adcffa03f9e268afaf6e53966e4aa4d83c37b283464de8f829529452d6ddd85f0f1bab184ffc6c248dd18d9d78585e57c9e89c4cace1
-EBUILD xf86-video-intel-2.20.7.ebuild 1468 SHA256 9b007c9ccc072f84206c81697490712c5795a884cf6942767bda8e16c1b675f9 SHA512 0ae434485290b5ba828917ca6019a888533ef9ded6097a9eead9fa963a558ade5f57965396adaa6b1c4b00661fc3b6d9c7ee20d1c869f1f671f49ffcbf8e285b WHIRLPOOL d81ce994b42d1e3f17e494db168798fd6bece4b918d9a30c089c3f2ed0a3bb19e4e3f440ece4808d6bf9a27961dd57088c637084cb42a3e970b04e1c19105152
 EBUILD xf86-video-intel-2.20.8.ebuild 1517 SHA256 143a8c1fe3df39bed3c8ba45405a07dad519f4f9ea3c095ba81f28432f00d447 SHA512 cd10862bbb53b35fd96f759e0821115fa778b43ef1bc87d406950d1835120fdb10a8b5d113b07d5979c612d7ab0aa61b53b6dfa713586dda112183d51c284459 WHIRLPOOL 6ef8c728fb8bfaaeee0c321007e984d6677f868fc5bcddd0f7bf9d4dc4134cf777b77c6158a21ad67dd5ccaef8e649eb740ef28e3b32e6d4488e056d0ba1954c
 EBUILD xf86-video-intel-2.20.9.ebuild 1521 SHA256 c56899a19c8699d6968763fd82df2d5489e44aacb6243cc86ae80a0403e36325 SHA512 6d15b631e32c806c58ac46136c96b0905ed38be99b39574b726e2be1a0c2299cb07fd451593db6ed360b8615d66be889533a6218031f1783a51c1fba1891e204 WHIRLPOOL 14daf087f7beb4ad452f3422310241cba285c9634a2a9bd710c1ad29caee2074efdab4222a13646ef71c479df89b0c5cb6acb2bd723357d3bf1d24866157c02b
 EBUILD xf86-video-intel-2.8.1.ebuild 794 SHA256 d012b3c43258b9e5e06d56e1d4aec2711644443eb927e800f9525bdc9610bf2f SHA512 e3791c7e80bb544618893401fc9dd157e5ce6d18727630ca7dec24ef8687bbfdfa2954fb70eebe31b0179c79e94861b6d4f2dedfd774017a1b492bad5944c36f WHIRLPOOL 93c4340495ec0b6fe6862a7e91bc8c748f96148e89980041bb0bf77e9982165af23f2e40b396fa0c4ebe9966b2d228182fd87403744c2f86cd0cfea229c3ac49
 EBUILD xf86-video-intel-2.9.1.ebuild 776 SHA256 7093496b4a55550f1f2a11b0f405be716f5da354947ff7380a052e4fd6954129 SHA512 29baaa622d1f6f3a8109174fe93569a5c1f25a862b81d6b72ca26e8ec8afdec3a072fce500a1bf30a11048650dc1eac1acef1dbae8e7e3506918e97ce0fda774 WHIRLPOOL 5377d90052588bebdae21154d4ff34703e9f5c468a76cf0fae92901e65895cc395d133f225ff777c5dbd250c995b11e60c4a6e8faafc1f65e1d81f86efffab41
-MISC ChangeLog 49116 SHA256 c5c9b41660a096d4ef13dcdcb4b4fd0360e3e9d62f402412b37cdef0e42c380b SHA512 f82fb9cebcb27fc61cec72f005df9f99119d02af89b055b4f18b96b58911bc4ca0b480651314395936fbaf3f37b98012048720dcb7aaf067859d81d71bbac0f7 WHIRLPOOL 9bc383220e042f6c6c421a52e63fb17fbabdd1ee7b71e7fa9ffb89f9eeb257d02220572779d9efa9dc545ba33043f7ef349160e8b442df15e0da7e72dae93977
+MISC ChangeLog 49433 SHA256 0fffc5fec400d68ffea96ba1403f7cbdf78f0871153665236505d3972be9e066 SHA512 68af0b6c75941f05464d1ee07c32295321fbee8de768293efa7dc61923359c960a12c007d31f00c093574f1bc62a5350539a4a9fb64bc5cf65f8e360eb43febe WHIRLPOOL 9515767cae54085ad7a448af4d09a261c5152951a3e80931a1a8f4f0e35d8a8a6214ea4e0b778286b08005696095b1c7a41b60deecbba10a74c38d40b96341f0
 MISC metadata.xml 483 SHA256 b96de77e3bad545136bdb56ed473b997b8b1ef7ae8f7137e9fd856e4b64a8aaf SHA512 48ed87bf243bd30ff54717c0c5634660c721ed620dae9c106fda193f937a47200c7e598be118c2ea2d6dfa589d9fc918a5e269d2e583a0326a1b8132c9e243ba WHIRLPOOL 89de9b7128187483a8f44506afdc59453c4ef47ea5c5914da73fe49d651afb48fdded3d23c72e42950cd048d4f509e8aed632d090fec327f0ab5c28e9aeacafc
