@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-intel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.107 2012/10/21 19:25:40 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.108 2012/10/21 19:30:01 remi Exp $
+
+  21 Oct 2012; Rémi Cardona <remi@gentoo.org> -xf86-video-intel-2.20.0.ebuild,
+  -xf86-video-intel-2.20.1.ebuild, -xf86-video-intel-2.20.2.ebuild,
+  -xf86-video-intel-2.20.3.ebuild, -xf86-video-intel-2.20.5.ebuild,
+  -xf86-video-intel-2.20.6.ebuild, -xf86-video-intel-2.20.7.ebuild:
+  Prune older 2.20.x revisions.
 
 *xf86-video-intel-2.20.12 (21 Oct 2012)
 
